Added form input message bar with css, along with an emolji icon

--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -46,3 +46,36 @@
     font-weight: 800;
     font-size: xx-small;
 }
+
+.chat__reciever {
+    margin-left: auto;
+    background-color: green;
+}
+
+.chat__footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    border-top: 1px solid lightgrey;
+}
+
+.chat__footer > form {
+    flex: 1;
+    display: flex;
+}
+
+.chat__footer > form > input {
+    flex:1;
+    border-radius: 30px;
+    padding:10px;
+    border: none;
+}
+
+.chat__footer > form > button {
+    display: none;
+}
+
+.chat__footer > .MuiSvgIcon-root {
+    padding: 10px;
+}
