Added Signup.js with a form

--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -47,9 +47,9 @@
     font-size: xx-small;
 }
 
-.chat__reciever {
+.chat__receiver {
     margin-left: auto;
-    background-color: green;
+    background-color: blue;
 }
 
 .chat__footer {
