--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -1,7 +1,7 @@
-.signup__content form {
+.login__content form {
     width: 600px;
     margin: 0 auto;
-    height: 800px;
+    height: 600px;
 }
 
 form>h2 {
@@ -10,7 +10,7 @@ form>h2 {
     color: salmon;
 }
 
-.signup__container {
+.login__container {
     background-color: lightgrey;
     box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.75)
 }
@@ -20,34 +20,42 @@ form>h2 {
     margin: auto;
 }
 
-.signup__content button {
+.login__content button {
     display: block;
     width: 200px;
     margin: 40px auto;
-    border-radius: 20px;
+    border-radius: 8px;
     height: 45px;
     background-color: yellow;
+    font-size: medium;
 }
 
-.signup__content input {
+.login__content input {
     width: 60%;
     border: 2px solid blue;
-    border-radius: 20px;
+    border-radius: 8px;
     height: 30px;
 }
 
-.signup__content ::placeholder {
+.login__content ::placeholder {
     text-align: center;
     color: red;
 }
 
-.signup__content label {
+.login__content label {
     float: left;
     width: 10em;
     margin-right: 1em;
     font-size: large;
 }
 
-.signup__content p {
+.login__content p {
     text-align: center;
+}
+
+.signup__btn {
+    text-decoration: none;
+    color:red;
+    font-size: medium;
+    
 }
