functionality of group chat window

--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -72,9 +72,9 @@
     border: none;
 }
 
-.chat__footer > form > button {
+/* .chat__footer > form > button {
     display: none;
-}
+} */
 
 .chat__footer > .MuiSvgIcon-root {
     padding: 10px;
