--- a/client/src/components/SideBarChat/SideBarChat.css
+++ b/client/src/components/SideBarChat/SideBarChat.css
@@ -1,7 +1,12 @@
-.sidebarChat {
+.sidebar__chat {
     display: flex;
     padding: 20px;
     cursor: pointer;
     border-bottom: 1px solid #F6F6F6;
     background-color: salmon;
+}
+
+.sidebar__chat__p {
+    
+    margin:3px;
 }
