--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -1,3 +1,9 @@
+* {
+    margin: auto;
+    padding: auto;
+    /* overflow-x: hidden; */
+}
+
 .login__content form {
     
     width: 600px;
@@ -49,6 +55,7 @@
 .form-group {
     padding: 40px;
     margin: auto;
+    text-align: center;
 }
 
 .login__content button {
@@ -96,15 +103,98 @@
     
 }
 
-@media only screen and (max-width: 1650px) {
-    .logo {
+@media screen and (max-width: 1650px) {
+
+    
+    /* .logo {
         height: 10px;
         width: 10%;
+        float: none
+    } */
+
+    
+    .login__content .float-child-right {
+        width: 10%;
+        padding: 15px;
+        border: 2px;
+        z-index: 10;
+    }
+    
+   
+    img {
+        width: 920px;
+        padding-right: 10%;
+       
+        
     }
 
-    .form {
-        height: 20%;
-        width: 20%
+   
+}
+
+@media screen and (max-width: 1400px) {
+    .login__content{
+        width: 400px;
+        padding-right: 55px;
+        padding-top: 150px;
+        border: 2px;
+        z-index: 10;
     }
+    
+   
+    img {
+        width: 820px;
+        padding-right: 10%;
+       
+        
+    }
+
+   
+}
+
+@media screen and (max-width: 1180px) {
+    .login__content form{
+        max-width: 330px;
+        max-height: 500px;
+        padding-right:60px;
+    }
+    
+   
+    img {
+        width: 700px;
+        padding-right: 10%;
+       
+        
+    }
+
+    .form-group {
+        width: 70%;
+    }
+
+   
+
+   
+}
+
+@media screen and (max-width: 1000px) {
+    .login__content form{
+        max-width: 280px;
+        max-height: 500px;
+    }
+    
+   
+    img {
+        width: 600px;
+        padding-right: 10%;
+        padding-bottom: 30px;
+       
+        
+    }
+
+    .form-group {
+        width: 90%;
+    }
+
+   
+
    
 }
