styling on login page and signup page

--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -2,9 +2,12 @@
     
     width: 600px;
     margin: 0 auto;
-    height: 600px;
+    height: 400px;
     background-image: linear-gradient(to right, #5658d6, #7C35f5, #A79Cf8);
-    box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.75)
+    box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.75);
+    font-family: 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    border-radius: 25px;
 }
 
 /* form>h2 {
@@ -22,50 +25,61 @@
     box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.75)
 } */
 
-.float-container {
+/* .float-container {
     border: 3px;
     padding: 20px;
-}
+} */
 
 .float-child-left {
     width: 50%;
     float: left;
-    padding: 15px;
+    padding-top: 8px;
     border: 2px;
+    padding-right: 100px;
 }
 
 .float-child-right {
     width: 50%;
     float: right;
-    padding: 15px;
+    padding-top: 8px;
     border: 2px;
 }
 
-.logo {
-    height: 160px;
+/* .logo {
+    height: 50%;
     width: 50%;
+} */
+
+img {
+    height: 75%;
+    width: 75%;
 }
 
 .form-group {
-    padding: 40px;
     margin: auto;
+    width: 60%;
+    font-family: 'Trebuchet MS', sans-serif;
+}
+
+.form-control {
+    padding: 8px;
 }
 
 .login__content button {
     display: block;
-    width: 200px;
     margin: 40px auto;
     border-radius: 8px;
     height: 45px;
-    background-color: yellow;
-    font-size: medium;
+    color: whitesmoke;
+    font-size: large;
+    font-weight: bold;
 }
 
 .login__content input {
-    width: 60%;
+    width: 100%;
     border: 2px;
     border-radius: 8px;
-    height: 60px;
+    height: 40px;
     
 }
 
@@ -89,9 +103,15 @@
     text-align: center;
 }
 
+.login_btn {
+    width: 380px;
+    background-color:gray;
+}
+
 .signup__btn {
-    text-decoration: none;
-    color:red;
-    font-size: medium;
+    width: 280px;
+    background-color: darkslategray;
+    
+    
     
 }
