--- a/client/src/components/Sidebar/Sidebar.css
+++ b/client/src/components/Sidebar/Sidebar.css
@@ -33,13 +33,17 @@
     border-radius: 20px;
 }
 
-.sidebar__searchContainer>.MuiSvgIcon-root{
-    color:gray;
+.sidebar__searchContainer>.MuiSvgIcon-root {
+    color: gray;
     padding: 10px;
 }
 
-.sidebar__searchContainer > input {
-    border:none;
+.sidebar__searchContainer>input {
+    border: none;
     outline-width: 0;
-    margin-left:10px;
+    margin-left: 10px;
+}
+
+.sidebar__chats {
+    overflow: scroll;
 }
