--- a/client/src/pages/SignUp.css
+++ b/client/src/pages/SignUp.css
@@ -1,7 +1,7 @@
 .signup__content form {
-    width: 600px;
+    /* width: 600px; */
     margin: 0 auto;
-    height: 800px;
+    /* height: 800px; */
     font-family: 'Trebuchet MS', sans-serif;
     font-weight: bold;
     
