added subgroup members button, got names above chat message. Changed subgroupchat.ccs color to gray

--- a/client/src/components/SideBarChat/SideBarChat.css
+++ b/client/src/components/SideBarChat/SideBarChat.css
@@ -3,7 +3,7 @@
     padding: 20px;
     cursor: pointer;
     border-bottom: 1px solid #F6F6F6;
-    background-color: salmon;
+    background-color: lightgray
 }
 
 .sidebar__chat__p {
