--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -69,7 +69,6 @@ img {
 .form-control {
     padding: 8px;
     width: 280px;
-    background-color:darkslategray;
 
 }
 
@@ -116,7 +115,7 @@ img {
 } */
 
 .row {
-    padding-top: 200px;
+    /* padding-top: 200px; */
     flex-wrap: nowrap;
 }
 
@@ -126,6 +125,10 @@ img {
     
     
     
+}
+
+.login {
+    padding-top: 200px;
 }
 
 @media screen and (max-width: 1000) {
@@ -140,7 +143,14 @@ img {
    .row {
        padding-top: 20px;
        flex-wrap: wrap;
+
    }
+   .login {
+       padding-top: 80px;
+       overflow-x: hidden;
+
+   }
+  
 }
 
 
