--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -38,23 +38,35 @@
 .chat__message {
     position: relative;
     font-size: 16px;
-    padding: 10px;
+    font-weight: 700;
+    padding: 8px;
     width: fit-content;
     border-radius: 20px;
     background-color: #FFFFFF;
     margin-bottom: 30px;
+    white-space: nowrap;
+    
 }
 
 .chat__timestamp {
     margin-left: 10px;
     font-size: xx-small;
+    white-space: nowrap;
+    color: lightblue;
+    margin-bottom: 3px;
+}
+
+.chat__back__btn {
+    border-radius: 8px;
+    margin: 5px;
 }
 
 .chat__name {
     position: absolute;
     top: -15px;
-    font-weight: 800;
-    font-size: xx-small;
+    font-weight: 900;
+    font-size: x-small;
+    color: whitesmoke;
 }
 
 .chat__receiver {
@@ -88,9 +100,4 @@
 
 .chat__footer>.MuiSvgIcon-root {
     padding: 10px;
-}
-
-.chat >.MuiSvgIcon-root {
-    color: red;
-
 }
