--- a/client/src/pages/User.css
+++ b/client/src/pages/User.css
@@ -9,7 +9,7 @@
 } */
 
 .user-form-control {
-    width: 325px;    
+    width: 325px;
     border: 2px;
     border-radius: 8px;
     height: 40px;
@@ -21,7 +21,7 @@
 
 .user-form-control ::placeholder {
     /* text-align: center; */
-    color:black;
+    color: black;
     opacity: 50%;
     font-family: 'Trebuchet MS', sans-serif;
     font-weight: bold;
@@ -31,15 +31,18 @@
 .user__page {
     /* background-image: url("../images/k-logo.png"); */
     background-image: linear-gradient(to right, #5658d6, #7C35f5, #A79Cf8);
-    height: 600px;
+    box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.75);
+    font-family: 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    border-radius: 25px;
     width: 400px;
+    text-align: center;
 }
 
-.user__container {
- 
+.user__h2 {
+    padding-top: 8px;
 }
-
-.user__kits {
+/* .user__kits {
     overflow: scroll;
     margin: 0 auto;
     max-height: 80;
@@ -54,8 +57,7 @@
     color: whitesmoke;
     font-size: large;
     font-weight: bold;
-    background-color:darkslategray;
-   
+    background-color: darkslategray;
 }
 
 .user__btn {
@@ -68,10 +70,9 @@
     color: whitesmoke;
     font-size: small;
     font-weight: bold;
-    background-color:darkslategray;
+    background-color: darkslategray;
     align-items: center;
     justify-content: center;
-    
 }
 
 .logout__btn {
@@ -84,6 +85,6 @@
     color: whitesmoke;
     font-size: small;
     font-weight: bold;
-    background-color:darkslategray;
+    background-color: darkslategray;
     place-items: center;
 }
