--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -55,7 +55,8 @@
     margin-bottom: 3px;
 }
 
-.chat__back__btn  {
+.chat__back__btn {
+    font-size: x-small;
     border-radius: 8px;
     margin: 5px;
     background-color: darkslategray;
@@ -106,11 +107,30 @@
 }
 
 .chat__header__right {
-    padding-left: 175px;
+    padding-left: 125px;
     margin-top: 60px;
 }
 
 .chat__header__right>.MuiSvgIcon-root {
     color: whitesmoke;
     font-size: 30px;
+    
 }
+
+.subgroup__hamburger__btn {
+    display: block;
+    margin: 6px auto;
+    border-radius: 8px;
+    height: 35px;
+    width: 180px;
+    color: darkslategray;
+    font-size: large;
+    font-weight: bold;
+    background-color: white;
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.subgroup__h5 {
+    text-align: center;
+}
+
