--- a/client/src/components/Sidebar/Sidebar.css
+++ b/client/src/components/Sidebar/Sidebar.css
@@ -24,6 +24,12 @@
     padding: 10px;
 }
 
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
 .sidebar__searchContainer {
     display: flex;
     align-items: center;
@@ -33,7 +39,7 @@
     border-radius: 20px;
 }
 
-.sidebar__searchContainer>.MuiSvgIcon-root {
+/* .sidebar__searchContainer>.MuiSvgIcon-root {
     color: gray;
     padding: 10px;
 }
@@ -42,8 +48,21 @@
     border: none;
     outline-width: 0;
     margin-left: 10px;
-}
+} */
 
 .sidebar__chats {
     overflow: scroll;
+}
+
+.note__button {
+    display: block;
+    margin: 6px auto;
+    border-radius: 8px;
+    height: 35px;
+    width: 180px;
+    color: whitesmoke;
+    font-size: large;
+    font-weight: bold;
+    background-color: darkslategray;
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
