got group page to scroll messages in mobile

--- a/client/src/pages/Group.css
+++ b/client/src/pages/Group.css
@@ -14,31 +14,24 @@
  }
 
  .chat__body {
-     position: relative;
-    padding: 160px;
-    padding-bottom: 0px;
-    width: fit-content;
-    bottom: 120px;
+    padding-bottom: 10px;
+    width: 90vw;
+    height: 100%;
     overflow: scroll;
+    overflow-x: hidden;
 
  }
 
- /* .app {
+ .app {
      display: flex;
- } */
+     height: 100vh;
+     margin-bottom: auto;
+ }
 
- /* .main {
-     padding: 10px;
-     height: 80vh;
-     margin: 10vh 0 10vh;
-     overflow-y: scroll;
-     overflow-x: hidden;
-     display: flex;
-     flex-direction: column;
- } */
+ 
  .chat__message {
      position: relative;
-     right: 160px;
+     /* right: 60px; */
 
  }
 
