testing different css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,8 +14,11 @@ background-color: #ededed;
 margin-top: -50px;
 height: 90vh;
 width: 90vw;
-box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.75)
+box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.75);
+
 }
+
+
 
 .sidebarChat__info {
   margin-left:15 px;
