--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -1,7 +1,4 @@
-
-
 .login__content form {
-    
     /* width: 600px; */
     margin: 0 auto;
     /* height: 400px; */
@@ -10,7 +7,6 @@
     font-family: 'Trebuchet MS', sans-serif;
     font-weight: bold;
     border-radius: 25px;
-    
 }
 
 /* form>h2 {
@@ -33,12 +29,13 @@
     padding: 20px;
 } */
 
- /* .float-child-left {
+/* .float-child-left {
     width: 130%;
     float: left;
     border: 2px;
     /* padding-right: 100px; */
- /*} 
+
+/*} 
 
 /* .float-child-right {
     width: 50%;
@@ -60,9 +57,7 @@ img {
 
 .form-group {
     margin: auto;
-
     text-align: center;
-
     width: 60%;
     font-family: 'Trebuchet MS', sans-serif;
 }
@@ -70,10 +65,7 @@ img {
 .form-control {
     padding: 8px;
     width: 280px;
-
 }
-
-
 
 .login__content button {
     display: block;
@@ -83,8 +75,7 @@ img {
     color: whitesmoke;
     font-size: large;
     font-weight: bold;
-    background-color:darkslategray;
-
+    background-color: darkslategray;
 }
 
 .login__content input {
@@ -92,16 +83,45 @@ img {
     border: 2px;
     border-radius: 8px;
     height: 40px;
-    
 }
 
 .login__content ::placeholder {
     text-align: center;
-    color:black;
+    color: black;
     opacity: 50%;
     font-family: 'Trebuchet MS', sans-serif;
     font-weight: bold;
     font-size: large;
+}
+
+.login__footer a {
+    margin: 10px;
+    color: #7C35f5;
+    text-align: center;
+}
+
+.login__footer {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.MuiSvgIcon-root {
+    font-size: xx-large;
+    color: #A79Cf8;
+}
+
+.footer__copyright {
+    color: darkslategray;
+    font-weight: 700;
+    font-size: x-small;
+    justify-content: center;
+    display: flex;
+}
+
+.footer__bottom p {
+    justify-content: center;
+    display: flex;
 }
 
 /* .login__content label {
@@ -110,6 +130,7 @@ img {
     margin-right: 1em;
     font-size: large;
 } */
+
 /* 
 .login__content p {
     text-align: center;
@@ -123,9 +144,6 @@ img {
 .signup__btn {
     width: 280px;
     background-color: darkslategray;
-    
-    
-    
 }
 
 .login {
@@ -139,25 +157,14 @@ img {
         align-content: center;
     }
 }
+
 @media screen and (max-width: 770px) {
-   
-   .row {
-       padding-top: 20px;
-       flex-wrap: wrap;
-
-   }
-   .login {
-       padding-top: 80px;
-       overflow-x: hidden;
-
-   }
-  
+    .row {
+        padding-top: 20px;
+        flex-wrap: wrap;
+    }
+    .login {
+        padding-top: 80px;
+        overflow-x: hidden;
+    }
 }
-
-
-
-   
-
-   
-
-
