--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -24,9 +24,14 @@ img {
     font-family: 'Trebuchet MS', sans-serif;
 }
 
+input {
+    color: black !important;
+}
+
 .form-control {
     padding: 8px;
     width: 280px;
+    color: black;
 }
 
 .login__content button {
