--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -51,7 +51,7 @@
     margin-left: 10px;
     font-size: xx-small;
     white-space: nowrap;
-    color: whitesmoke;
+    color: darkslategray;
     margin-bottom: 3px;
 }
 
